--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 
     <link href="http://fonts.cdnfonts.com/css/nautilus-pompilius" rel="stylesheet">
-      <link rel="stylesheet" href="style.css">
+    <style>
+      @import url('http://fonts.cdnfonts.com/css/nautilus-pompilius');
+</style>
+
+    <link rel="stylesheet" href="style.css">
      
 </head>
 <body>
