--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 
-    <link href="http://fonts.cdnfonts.com/css/nautilus-pompilius" rel="stylesheet">
+    <!-- <link href="http://fonts.cdnfonts.com/css/nautilus-pompilius" rel="stylesheet"> -->
     
-
+    <link href="//db.onlinewebfonts.com/c/9f609b97d7e2c7f4c3dc93b36d6a1eeb?family=Nautilus+Pompilius" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="style.css">
      
 </head>
