--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
     <!-- <link href="http://fonts.cdnfonts.com/css/nautilus-pompilius" rel="stylesheet"> -->
     
     <link href="//db.onlinewebfonts.com/c/9f609b97d7e2c7f4c3dc93b36d6a1eeb?family=Nautilus+Pompilius" rel="stylesheet" type="text/css"/>
+ 
     <link rel="stylesheet" href="style.css">
-     
+     <style>
+       @font-face {font-family: "Nautilus Pompilius"; src: url("//db.onlinewebfonts.com/t/9f609b97d7e2c7f4c3dc93b36d6a1eeb.eot"); src: url("//db.onlinewebfonts.com/t/9f609b97d7e2c7f4c3dc93b36d6a1eeb.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/9f609b97d7e2c7f4c3dc93b36d6a1eeb.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/9f609b97d7e2c7f4c3dc93b36d6a1eeb.woff") format("woff"), url("//db.onlinewebfonts.com/t/9f609b97d7e2c7f4c3dc93b36d6a1eeb.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/9f609b97d7e2c7f4c3dc93b36d6a1eeb.svg#Nautilus Pompilius") format("svg"); } 
+      @import url(//db.onlinewebfonts.com/c/9f609b97d7e2c7f4c3dc93b36d6a1eeb?family=Nautilus+Pompilius);
+     </style>
 </head>
 <body>
     <header class=" ">
