--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <p>Aenean commodo ligula eget dolor aenean massa. Cum sociis nat penatibu set magnis dis parturient montes, nascetur ridiculus mus. quam felisorat, ultricies nec, Aenean commodo ligula eget dolor penatibu set magnis is parturient montes, nascetur ridiculus mus. quam felisorat, ultricies nec, pellentesque eu, pretium quis, sem. quat massa quis enim. Donec vitae sapien ut libero venenatis fauci Nullam quis ante. Etiam sit amet rci eget eros.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusm incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia, nostrud exercitation ullamco.</p>
             </div>
-            <div class="col-lg-6 col-md-6 mt-md-5 pt-md-5 h-100       position-relative section-2-images    d-flex justify-content-md-start  justify-content-lg-start  ">
+            <div class="col-lg-6 col-md-6 mt-md-5 mb-sm-5 pt-md-5 h-100       position-relative section-2-images    d-flex justify-content-md-start  justify-content-lg-start  ">
               <div>
                 <img class="img-fluid  position-absolute " src="images/about-main.jpg" alt="">
               <img class="img-fluid  position-absolute      " src="images/about-inset.jpg" alt="">
