--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-
-    <!-- <link href="http://fonts.cdnfonts.com/css/nautilus-pompilius" rel="stylesheet"> -->
     
     <link href="//db.onlinewebfonts.com/c/9f609b97d7e2c7f4c3dc93b36d6a1eeb?family=Nautilus+Pompilius" rel="stylesheet" type="text/css"/>
  
@@ -873,6 +871,29 @@
 
 
         <!-- contact us section -->
+        <section class="owner">
+          <div class="container">
+            <div style="height: 177px; margin-top: 100px; padding-top: 100px;" class="container d-flex justify-content-center align-items-center" >
+              <div class="text-center">
+                <h1 class=" ">OWNER</h1>
+                 
+              </div>
+            </div>
+            <div class="row mt-0">
+              <div class="col-lg-7">
+                <h1><span style="font-size: 50px;">Hello</span><br> I'am Amir Hossain Pias</h1>
+                <h2 class="text-white">Web Developer</h2>
+                <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, ea fugit praesentium suscipit itaque sed.</p>
+                 <e-mail class="text-white">amirhossainpias111@gmail.com</e-mail>
+              </div>
+              <div class="col-lg-5">
+                <img  class="img-fluid w-100 " src="images/owner.png" alt="">
+              </div>
+            </div>
+          </div>
+
+        </section>
+
 
         <section class="section-10" id="contact-us">
           <div class="container">
