--- a/index.html
+++ b/index.html
@@ -880,10 +880,10 @@
               </div>
             </div>
             <div class="row mt-0">
-              <div class="col-lg-7">
+              <div class="col-lg-7 col-md-7">
                 <h1><span style="font-size: 50px;">Hello</span><br> I'am Amir Hossain Pias</h1>
                 <h2 class="text-white">Web Developer</h2>
-                <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, ea fugit praesentium suscipit itaque sed.</p>
+                <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, ea fugit praesentium suscipit itaque sed.Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, ea fugit praesentium suscipit itaque sed.</p>
                  <e-mail class="text-white">amirhossainpias111@gmail.com</e-mail>
               </div>
               <div class="col-lg-5">
